--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,8 +9,12 @@ jobs:
     - uses: engineerd/setup-kind@v0.1.0
       with:
         version: "v0.5.0"        
-    - name: Testing
+    - name: KinD Testing
       run: |
         export KUBECONFIG="$(kind get kubeconfig-path)"
         kubectl cluster-info
         kubectl get pods -n kube-system
+    - name: Docker Testing
+      run: |
+        docker ps -a
+        docker images
