--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - uses: engineerd/setup-kind@v0.1.0
+    - uses: v1k0d3n/setup-kind@v0.1.0
       with:
         version: "v0.5.0"        
     - name: KinD Testing
